<resources>
    <string name="app_name">天眼--定位监控</string>
    <string name="app_title">天眼--定位监控</string>
    <string name="jmui_action_settings">Settings</string>
    <string name="jmui_about">关于</string>
    <string name="jmui_send">发送</string>
    <string name="jmui_chat">聊天</string>
    <string name="jmui_single_chat">单聊</string>
    <string name="jmui_group_chat">群聊</string>
    <string name="jmui_picture">图片</string>
    <string name="jmui_take_photo">拍照</string>
    <string name="jmui_video">视频</string>
    <string name="jmui_location">位置</string>
    <string name="jmui_business_card">名片</string>
    <string name="jmui_create_file_failed">创建文件失败</string>
    <string name="jmui_record_voice_hint">按住 说话</string>
    <string name="jmui_cancel_record_voice_hint">松开手指，取消发送</string>
    <string name="jmui_send_voice_hint">松开 结束</string>
    <string name="jmui_move_to_cancel_hint">手指上滑，取消发送</string>
    <string name="jmui_rest_record_time_hint">还可以说%s秒</string>
    <string name="jmui_time_too_short_toast">时间太短！</string>
    <string name="jmui_file_fetch_failed">文件获取失败</string>
    <string name="jmui_voice_length">10"</string>
    <string name="jmui_symbol_second">\"</string>
    <string name="jmui_confirm">确定</string>
    <string name="jmui_resend_message_hint">确定重发消息?</string>
    <string name="jmui_cancel">取消</string>
    <string name="jmui_resend_commit">重发</string>
    <string name="jmui_copy">复制</string>
    <string name="jmui_copy_toast">已复制</string>
    <string name="jmui_forward_msg">转发</string>
    <string name="jmui_delete">删除</string>
    <string name="jmui_loading">加载中</string>
    <string name="jmui_username">用户名</string>
    <string name="jmui_registering">注册中</string>
    <string name="jmui_register_success">注册成功</string>
    <string name="jmui_login">登录</string>
    <string name="jmui_logging">登录中</string>
    <string name="jmui_login_success">登录成功</string>
    <string name="jmui_record_voice_permission_denied">请在应用的权限管理中将使用录音选项设置为允许，
        否则将无法使用录音功能</string>
    <string name="jmui_record_voice_permission_request">若要使用语音功能，请选择允许录音</string>
    <string name="jmui_local_picture_not_found_toast">暂无外部存储，某些本地图片不可预览</string>
    <string name="jmui_sdcard_not_exist_toast">暂无外部存储</string>
    <string name="jmui_voice_fetch_failed_toast">获取语音失败，请重试</string>
    <string name="jmui_file_not_found_toast">文件丢失</string>
    <string name="jmui_camera_not_prepared">摄像头尚未准备好</string>
    <string name="jmui_about_content">简单的聊天demo, 可以发文字, 语音及拍照发送图片.
        jmessage—sdk版本为1.2.1</string>
    <string name="jmui_time_format_year_month_day">yyyy年-MM月-dd日</string>
    <string name="jmui_time_format_accuracy">yyyy-MM-dd HH:mm </string>
    <string name="jmui_time_format_hours">HH:mm</string>
    <string name="jmui_yesterday">昨天</string>
    <string name="jmui_before_dawn">凌晨</string>
    <string name="jmui_morning">早上</string>
    <string name="jmui_afternoon">下午</string>
    <string name="jmui_night">晚上</string>
    <string name="jmui_monday">周一</string>
    <string name="jmui_tuesday">周二</string>
    <string name="jmui_wednesday">周三</string>
    <string name="jmui_thursday">周四</string>
    <string name="jmui_friday">周五</string>
    <string name="jmui_saturday">周六</string>
    <string name="jmui_sunday">周日</string>
    <string name="year">年</string>
    <string name="jmui_month">月</string>
    <string name="jmui_day">日</string>
    <string name="jmui_user_logout_dialog_title">下线提示</string>
    <string name="jmui_user_logout_dialog_message">您的账号已经在另一台设备上登录，您被迫下线</string>
    <string name="jmui_server_abnormal_toast">服务器返回异常，请重试</string>
    <string name="jmui_connect_failed_toast">连接服务器失败，请稍后重试</string>
    <string name="jmui_server_return_error_toast">服务器返回格式错误</string>
    <string name="jmui_unknown_error_toast">未知错误</string>
    <string name="jmui_system_error_toast">系统内部错误，请稍候重试</string>
    <string name="jmui_parameter_illegal">参数值不合法</string>
    <string name="jmui_server_800002">AppKey信息为空</string>
    <string name="jmui_server_800003">AppKey未注册</string>
    <string name="jmui_server_800004">用户ID为空</string>
    <string name="jmui_server_800005">用户ID未注册(AppKey无该UID)</string>
    <string name="jmui_server_800006">用户ID不存在(数据库中无该UID)</string>
    <string name="jmui_server_800012">请重新登录</string>
    <string name="jmui_server_800013">您的账号已登出，请重新登录</string>
    <string name="jmui_server_801003">用户名不存在</string>
    <string name="jmui_server_802001">用户名为空</string>
    <string name="jmui_server_801004">密码错误</string>
    <string name="jmui_server_803001">发送消息失败，状态存储异常</string>
    <string name="jmui_server_803002">发送消息失败，系统网络异常</string>
    <string name="jmui_server_803003">发送失败，目标用户未注册或不存在</string>
    <string name="jmui_server_803004">发送失败，此群已被删除</string>
    <string name="jmui_server_803005">您已被请出此群，不能发送消息</string>
    <string name="jmui_server_803008">消息已发出，但被对方拒收了。</string>
    <string name="jmui_server_808003">讨论组数量已达上限，创建失败</string>
    <string name="jmui_server_808004">群组名长度超出上限</string>
    <string name="jmui_server_810003">用户不属于该群组</string>
    <string name="jmui_server_810005">要添加的用户尚未注册</string>
    <string name="jmui_server_810007">用户已存在</string>
    <string name="jmui_server_810008">讨论组的成员数量已达上限，添加失败</string>
    <string name="jmui_server_810009">该用户拥有的讨论组数量已达上限，添加失败</string>
    <string name="jmui_server_811003">用户不在该讨论组中，删除成员失败</string>
    <string name="jmui_server_812002">您已被请出此群，不能修改相关信息</string>
    <string name="jmui_server_818001">要添加的黑名单列表为空，添加失败</string>
    <string name="jmui_server_818002">要添加的黑名单列表中有成员不存在，添加失败</string>
    <string name="jmui_server_818003">要添加的黑名单列表中有成员不能被添加，添加失败</string>
    <string name="jmui_server_818004">要添加的黑名单列表中有成员重复添加，添加失败</string>
    <string name="jmui_sdk_http_899001">用户已存在</string>
    <string name="jmui_sdk_http_899006">该群已被删除</string>
    <string name="jmui_sdk_http_898005">uid不存在</string>
    <string name="jmui_sdk_http_898006">此群已被删除</string>
    <string name="jmui_sdk_http_898008">校验失败</string>
    <string name="jmui_sdk_http_898009">APPKey不存在</string>
    <string name="jmui_sdk_http_898010">请求失败，请稍候重试</string>
    <string name="jmui_sdk_http_898030">系统繁忙，稍后重试</string>
    <string name="jmui_sdk_87x_871104">服务器返回错误</string>
    <string name="jmui_sdk_87x_871303">用户名需以数字或字母开头，长度在4-128个字节之间，且不能带_ @ -以外的字符</string>
    <string name="jmui_sdk_87x_871304">密码长度要在4-128个字节之间</string>
    <string name="jmui_sdk_87x_871305">名称长度须小于64个字节</string>
    <string name="jmui_sdk_87x_871309">消息所含文件不存在</string>
    <string name="jmui_sdk_87x_871310">网络已断开，请检查网络连接</string>
    <string name="jmui_sdk_87x_871311">用户未设定头像，下载头像失败</string>
    <string name="jmui_sdk_87x_871312">ImageContent创建失败</string>
    <string name="jmui_sdk_87x_871403">第三方上传失败，请稍后重试</string>
    <string name="jmui_sdk_87x_871404">下载失败，请稍后重试</string>
    <string name="jmui_sdk_87x_871501">appkey与appid不匹配或者token无效</string>
    <string name="jmui_sdk_87x_871502">appkey无效</string>
    <string name="jmui_sdk_87x_871503">appkey与platform不匹配</string>
    <string name="jmui_sdk_87x_871504">push注册还未完成，请稍后重试</string>
    <string name="jmui_sdk_87x_871505">包名不存在</string>
    <string name="jmui_sdk_87x_871506">imei无效</string>
    <string name="jmui_sdk_87x_871201">请求超时，请检查您的网络</string>
    <string name="font_type">微软雅黑</string>
    <string name="all_supplement_model">里程补偿方式:</string>
    <string name="all_coord_type">坐标类型:</string>
    <string name="all_cancel">取消</string>
    <string name="all_sure">确定</string>
    <string name="all_fence_operate">围栏操作</string>
    <string name="no_supplement">不补充</string>
    <string name="straight">直线距离</string>
    <string name="driving">最短驾车路线</string>
    <string name="riding">最短骑行路线</string>
    <string name="walking">最短步行路线</string>
    <string name="bd09ll">百度经纬度坐标</string>
    <string name="gcj02">国测局加密坐标</string>
    <string name="base_title">BaseActivity</string>
    <string name="login_title">LoginActivity</string>
    <string name="tracing_title">轨迹追踪</string>
    <string name="tracing_options_title">追踪设置</string>
    <string name="track_query_title">轨迹查询</string>
    <string name="track_query_options_title">查询设置</string>
    <string name="fence_title">地理围栏</string>
    <string name="bos_title">图片服务</string>
    <string name="cache_manage_title">缓存管理</string>
    <string name="fag_title">常见问题</string>
    <string name="tracing_desc">室内、外高精度连续追踪</string>
    <string name="track_query_desc">查询被追踪者的历史轨迹</string>
    <string name="fence_desc">本地、云端围栏双重监控</string>
    <string name="bos_desc">上传、下载图片，生成水印图片</string>
    <string name="cache_manage_desc">查询、删除缓存的轨迹信息</string>
    <string name="faq_desc">状态码及问题反馈渠道说明</string>
    <string name="tracing_option_interval">采集、打包频率(单位:秒):</string>
    <string name="tracing_option_location_mode">定位模式:</string>
    <string name="tracing_option_object_save">对象存储:</string>
    <string name="high_accuracy">高精度定位模式，GPS与网络综合定位</string>
    <string name="battery_saving">低功耗定位模式，仅使用网络定位</string>
    <string name="device_sensors">仅使用设备(GPS)定位</string>
    <string name="close_bos">关闭</string>
    <string name="open_bos">开启</string>
    <string name="gather_interval">采集频率:</string>
    <string name="pack_interval">打包频率:</string>
    <string name="gather_interval_hint">5</string>
    <string name="pack_interval_hint">30</string>
    <string name="track_query_option_time">起止时间:</string>
    <string name="track_query_option_process">纠偏与数据分析:</string>
    <string name="track_query_option_radius_threshold">精度过滤(单位:米):</string>
    <string name="track_query_option_transport_mode">交通方式:</string>
    <string name="track_query_option_sort_type">排序规则:</string>
    <string name="start_time">开始：</string>
    <string name="end_time">结束：</string>
    <string name="radius_value">过滤值：</string>
    <string name="radius_hint">0</string>
    <string name="processed">纠偏</string>
    <string name="denoise">去噪</string>
    <string name="vacuate">抽稀</string>
    <string name="mapmatch">绑路</string>
    <string name="driving_mode">驾车</string>
    <string name="riding_mode">骑行</string>
    <string name="walking_mode">步行</string>
    <string name="asc">升序</string>
    <string name="desc">降序</string>
    <string name="trace_control_title">追踪控制</string>
    <string name="track_analysis_title">轨迹分析</string>
    <string name="track_analysis_speeding_title">超速详情</string>
    <string name="track_analysis_breaking_title">急刹车详情</string>
    <string name="track_analysis_accel_title">急变速详情</string>
    <string name="track_analysis_steering_title">急转弯详情</string>
    <string name="track_analysis_stay_title">停留点详情</string>
    <string name="fence_setting_title">围栏设置</string>
    <string name="fence_create_local_circle">创建本地圆形围栏</string>
    <string name="fence_create_server_circle">创建服务端圆形围栏</string>
    <string name="fence_create_polyline">创建多段线围栏</string>
    <string name="fence_create_polygon">创建多边形围栏</string>
    <string name="start_trace">开启服务</string>
    <string name="stop_trace">停止服务</string>
    <string name="start_gather">开启采集</string>
    <string name="stop_gather">停止采集</string>
    <string name="speeding">超 速</string>
    <string name="harsh_breaking">急刹车</string>
    <string name="harsh_accel">急变速</string>
    <string name="harsh_steering">急转弯</string>
    <string name="stay_point">停留点</string>
    <string name="loc_time">定位时间</string>
    <string name="actual_speed">实际行驶速度：</string>
    <string name="limit_speed">限定最高时速：</string>
    <string name="acceleration">实际加速度：</string>
    <string name="initial_speed_1">加速前时速：</string>
    <string name="end_speed_1">加速后时速：</string>
    <string name="initial_speed_2">刹车前时速：</string>
    <string name="end_speed_2">刹车后时速：</string>
    <string name="centripetal_acceleration">向心加速度：</string>
    <string name="turn_type">转向类型：</string>
    <string name="turn_speed">转向时速：</string>
    <string name="stay_start_time">开始时间：</string>
    <string name="put_object">上传对象(图片)</string>
    <string name="get_object">获取对象(图片)</string>
    <string name="generatePresigned_url">获取对象(图片)URL</string>
</resources>