<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <include layout="@layout/activity_top"></include>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/item_margin_left"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center|left"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:background="@mipmap/bg_btn_common"
            android:onClick="onPutObject"
            android:text="@string/put_object"
            android:textColor="@color/layout_title"
            android:textSize="15dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:background="@mipmap/bg_btn_common"
            android:onClick="onGetObject"
            android:text="@string/get_object"
            android:textColor="@color/layout_title"
            android:textSize="15dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:background="@mipmap/bg_btn_common"
            android:onClick="onGeneratePresignedUrl"
            android:text="@string/generatePresigned_url"
            android:textColor="@color/layout_title"
            android:textSize="15dp" />


    </LinearLayout>

</LinearLayout>



